[tool.poetry]
name = "sample-llm-transformers"
version = "0.1.0"
description = "Sample codes for LLM applications"
authors = ["Ron Webb <ron@ronella.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.0"
tensorflow-io = "~0.31.0"
datasets = "^2.20.0"
transformers = "^4.42.4"
tensorflow-intel = "~2.16.0"
tensorflow = "~2.16.0"
tf-keras = "~2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
